...

    <string name="open">open</string>
    <string name="delete">delete</string>
    <string name="rename">rename</string>

    <!-- Toolbar -->
    <string name="menu_item_x_axis">X-axis</string>
    <string name="menu_item_y_axis">Y-axis</string>
    <string name="menu_item_cap_glide">Glide limit</string>
    <string name="menu_item_units">Units</string>
    <string name="menu_item_set_range_marker">Set range marker</string>
    <string name="menu_item_crop_range">Crop range</string>
    <string name="menu_item_discard_markers">Discard markers</string>

    <!-- UnitSystem -->
    <string name="kmh">%1$s km/h</string>
    <string name="mph">%1$s mph</string>
    <string name="m">%1$s m</string>
    <string name="ft">%1$s ft</string>
    <string name="glide">%1$s</string>
    <string name="seconds">%1$s sec</string>
</resources>

