...
                  style="@style/metricsCheckbox"
                  android:text="@string/time_label"
                  android:checked="true"
                  android:textColor="@color/time"
                  android:drawableStart="@drawable/ic_time"
                  android:onClick="onXAxisDialogCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_distance"
                  style="@style/metricsCheckbox"
                  android:text="@string/distance_label"
                  android:checked="true"
                  android:textColor="@color/distance"
                  android:drawableStart="@drawable/ic_dist_tot"
                  android:onClick="onXAxisDialogCheckboxClicked"/>
...
